--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,3 +34,51 @@ body{
 .cabecalho ul li a:hover{
     font-weight: bold;
 }
+
+/*   */
+
+.painel{
+    background: url(../images/painel.jpg);
+    height: 600px;
+}
+
+.painel h2{
+    color: white;
+    font-size: 60px;
+    font-weight: 400;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/*   */
+
+.secao-com-texto{
+    padding: 153px;
+    text-align: center;
+}
+
+.secao-com-texto img{
+    height: 170px;
+    width: 170px;
+    margin-bottom: 70px;
+}
+
+.secao-com-texto h2{
+    font-weight: 600;
+    margin-bottom: 37px;
+    font-size: 45px;
+    text-transform: uppercase;
+}
+
+.secao-com-texto p{
+    font-size: 18px;
+    width: 702px;
+    margin: 0 auto;
+}
+
+.secao-com-texto.onde-estamos p{
+    font-size: 28px;
+    width: 440px;
+}
